--- a/.gitignore
+++ b/.gitignore
@@ -1,472 +1,136 @@
+/* src/features/feeGetByCif/feeGetByCifUseCase.js
+   — versão single‑connection‑per‑call
+------------------------------------------------------------------- */
+import { Fee }               from '#src/models/entities/Fees.js';
+import Result                from '#features/shared/result.js';
+import CustomerFees          from '#src/models/CustomerFees.js';
+import BankAccountFee        from '#src/models/BankAccountFee.js';
+import InvestimentAccountFee from '#src/models/InvestimentAccountFee.js';
+import { FeeCase }           from '#src/models/entities/FeeCase.js';
+import { Field }             from '#src/models/entities/Fields.js';
 import {
   connectToFeeMgmtDb,
   executeStoreProcedure
-} from '#core/data/mssql/index.js'
+} from '#core/data/mssql/index.js';
 
-
-export async function getAllFeePackage() {
-  const connection = await connectToFeeMgmtDb()
-  const recordset = await executeStoreProcedure(
-    connection,
-    'sp_get_feepackage',
-    {}
-  )
-
-  const listPackages = recordset.map((record) => {
-    const id = record.FeePackageId === undefined ? null : record.FeePackageId
-    const description = record.FeePackageDescription === undefined ? null : record.FeePackageDescription
-    const type = record.FeePackageType === undefined ? null : record.FeePackageType
-    const coverage = record.FeePackageCoverage === undefined ? null : record.FeePackageCoverage
-
-    return {
-      id,
-      description,
-      type,
-      coverage
-    }
-  })
-
-  return listPackages.filter(
-    (item, index, self) => index === self.findIndex((x) => x.id === item.id)
-  )
+/* helpers ‑‑—————————————————————————————————————————————— */
+async function getPackageData(cifno) {
+  const conn = await connectToFeeMgmtDb();
+  const [row] = await executeStoreProcedure(conn, 'sp_get_fees_byCIF', { cifno });
+  if (!row) return {};
+  return {
+    defaultFeePackageId: row['Default Fee Package Id'] ?? null,
+    branchCity:          row['Branch City']?.trim()         || '',
+    branchState:         row['Branch State']?.trim()        || '',
+    branchType:          row['Branch Type']?.trim()         || '',
+    defaultPackageType:  row['Default Package Type']?.trim()|| '',
+    feePackage:          row['Default Fee Package']?.trim() || '',
+  };
 }
 
-
-export async function getFeegroupById(id) {
-  const connection = await connectToFeeMgmtDb()
-  const recordset = await executeStoreProcedure(
-    connection,
-    'sp_get_feegroup_info',
-    { GroupId: id }
-  )
- 
-
-  const listFeegroupInfo = recordset.map((record) => {
-    const groupId = record.GroupId
-    const groupName = record.GroupName === undefined ? null : record.GroupName
-    const businessPackageId = record.BusinessPackageId === undefined ? null : record.BusinessPackageId
-    const businessPackage = record.BusinessPackage === undefined ? null : record.BusinessPackage
-    const individualPackageId = record.IndividualPackageId
-    const individualPackage = record.IndividualPackage
-
-    return {
-      groupId,
-      groupName,
-      businessPackageId,
-      businessPackage,
-      individualPackageId,
-      individualPackage
-    }
-  })
-
-  return listFeegroupInfo
+async function getStandardFees(packageId) {
+  const conn  = await connectToFeeMgmtDb();
+  const rows  = await executeStoreProcedure(
+                 conn,'sp_get_standard_fees_bypackage',
+                 { FeePackageId: packageId });
+  console.log('STD‑rows', rows?.length);           // <‑‑ debug
+  return rows ?? [];
 }
 
-export async function getFeegroupAll() {
-  const connection = await connectToFeeMgmtDb()
-  const recordset = await executeStoreProcedure(
-    connection,
-    'sp_get_feegroup',
-    {}
-  )
-
-  const listFeegroupInfo = recordset.map((record) => {
-    const groupId = record.FeeGroupId === undefined ? null : record.FeeGroupId
-    const groupName = record.FeeGroupName === undefined ? null : record.FeeGroupName
-
-    return {
-      groupId,
-      groupName
-    }
-  })
-
-  return listFeegroupInfo
+async function getExceptionFees(packageId) {
+  const conn  = await connectToFeeMgmtDb();
+  const rows  = await executeStoreProcedure(
+                 conn,'sp_get_exception_fees_bypackage',
+                 { FeePackageId: packageId });
+  console.log('EXC‑rows', rows?.length);           // <‑‑ debug
+  return rows ?? [];
 }
 
-export async function getFeegroupinfoAll() {
-  const connection = await connectToFeeMgmtDb()
-  const recordset = await executeStoreProcedure(
-    connection,
-    'sp_get_feegroup_info',
-    {}
-  )
-
-  const listFeegroupInfo = recordset.map((record) => {
-    const groupId = record.GroupId === undefined ? null : record.GroupId 
-    const groupName = record.GroupName === undefined ? null : record.GroupName
-    const packageId = record.PackageId === undefined ? null : record.PackageId
-    const feeGroupPackageId = record.FeeGroupPackageId === undefined ? 0 : record.FeeGroupPackageId
-    const packageDescription = record.PackageDescription === undefined ? null : record.PackageDescription
-    const packageType = record.PackageType === undefined ? null : record.PackageType
-
-
-    return {
-      groupId,
-      groupName,
-      packageId,
-      feeGroupPackageId,
-      packageDescription,
-      packageType
-    }
-  })
-
- return listFeegroupInfo
+function getDocumentUrl(id) {
+  const urls = global.environment.scheduleUrls || {};
+  const key  = ({ 1:'intlPB3', 2:'uSPBIndividual3', 3:'uSPBCorporation3' })[id];
+  return key ? urls[key] || '' : '';
 }
 
-export async function getOfficerPackageByBranch(id) {
-  const connection = await connectToFeeMgmtDb()
-
-  const recordset = await executeStoreProcedure(
-    connection,
-    'sp_get_officerpackage_bybranch',
-    { branch_code: id }
-  )
-
-  const listOfficerPackage = recordset.map((record) => {
-    const officerId = record.OfficerId
-    const officerName = record.OfficerName
-    const branchName = record.BranchName
-    const officerPackage = record.OfficerPackage
-
-    return {
-      officerId,
-      officerName,
-      branchName,
-      officerPackage
-    }
-  })
-
-  return listOfficerPackage
+/* Mongo helper (inalterado) */
+async function getFeeStandard(filter) {
+  return Fee.find({ $or: filter })
+            .select({ feeType:1, feeGroups:{ name:1, fields:1, code:1 } })
+            .lean();
 }
 
-// export async function getOfficerPackageByGroupId(id) {
-//   const connectionGroup = await connectToFeeMgmtDb()
-//   const recordsetGroup = await executeStoreProcedure(
-//     connectionGroup,
-//     'sp_get_feegroup_info',
-//     { GroupId: id }
-//   )
+/* ================================================================== */
+export default class FeeGetByCifUseCase {
 
-//   const listFeeGroupInfo = recordsetGroup.map((record) => {
-//     const groupId = record.GroupId
-//     const groupName = record.GroupName === undefined ? null : record.GroupName
-//     const businessPackageId =  record.BusinessPackageId === undefined ? null : record.BusinessPackageId
-//     const businessPackage = record.BusinessPackage === undefined ? null : record.BusinessPackage
-//     const individualPackageId = record.IndividualPackageId
-//     const individualPackage = record.IndividualPackage
+  async execute({ customerAccount }) {
+    /* 1) modelo‑padrão Mongo */
+    const fees = await getFeeStandard([
+      { feeType:'Customer Fees'     },
+      { feeType:'Bank Account Fees' },
+      { feeType:'Investment Account Fees' }
+    ]);
 
-//     return {
-//       groupId,
-//       groupName,
-//       businessPackageId,
-//       businessPackage,
-//       individualPackageId,
-//       individualPackage
-//     }
-//   })
+    /* 2) dados de Package (SQL) */
+    const pkgData   = await getPackageData(customerAccount[0].cifno);
+    const packageId = pkgData.defaultFeePackageId ?? 1; // fallback
 
-//   return listFeeGroupInfo
-// }
+    /* 3) valores Standard / Exception (SQL)            */
+    const stdRows = await getStandardFees  (packageId);
+    const excRows = await getExceptionFees (packageId);
 
-export async function getOfficerPackageGetByBranchId(id) {
+    /* 4) mescla pkgData + valores vindos do SQL na lista de contas */
+    customerAccount.forEach(acc => {
+      Object.assign(acc, pkgData);
 
-  const connection = await connectToFeeMgmtDb()
-  const recordset = await executeStoreProcedure(connection,'sp_get_officerpackage_bybranch',{ branch_code: id })
+      /* procura valor (Standard) que combine com feeType */
+      const std = stdRows.find(r => Number(r.FeeType) === acc.feeType);
+      if (std) acc.feeAmount = Number(std.FeeAmount);
 
-  const connectionGroup = await connectToFeeMgmtDb()
-  const recordsetGroup = await executeStoreProcedure(connectionGroup,'sp_get_feegroup',{ })
+      /* procura exception específica pelo FeeCode        */
+      const exc = excRows.find(e => e.FeeCode === acc.feeCode);
+      if (exc) acc.exceptionAmount = Number(exc.Amount);
+    });
 
+    /* 5) construtores já existentes */
+    const result   = { fees: [] };
+    const [customer, bank, investment] = [
+      new CustomerFees      (fees, customerAccount),
+      new BankAccountFee    (fees, customerAccount),
+      new InvestimentAccountFee(
+        fees, customerAccount, await Field.findOne({ code:7 }))
+    ];
 
+    [customer, bank, investment]
+      .filter(f => f.fee && f.fee.feeGroups?.length)
+      .forEach(f => result.fees.push(f.fee));
 
-  const listOfficerPackage = recordset.map((record) => {
-    const officerId = record.OfficerId === undefined ? null : record.OfficerId
-    const officerName = record.OfficerName === undefined ? null : record.OfficerName
-    const branchName = record.BranchName === undefined ? null : record.BranchName
-    const feeGroupId = record.FeeGroupId === undefined ? null : record.FeeGroupId
-    const feeGroup = record.FeeGroup === undefined ? null : record.FeeGroup
-    const officerBusPkgId = record.OfficerBusPkgGroupId === undefined ? null : record.OfficerBusPkgGroupId
-    const officerBusPkg = record.OfficerBusPkg === undefined ? null : record.OfficerBusPkg
-    const officerIndPackageId = record.OfficerIndPkgGroupId === undefined ? null : record.OfficerIndPkgGroupId
-    const officerIndPackage = record.OfficerIndPkg === undefined ? null : record.OfficerIndPkg
+    /* casos ativos */
+    const actives = await FeeCase.find({
+      cif: customerAccount[0].cifno,
+      status: { $nin:['DONE','REJECTED'] },
+      caseNumber: { $exists:true }
+    });
 
-    const listGroup = recordsetGroup.map((element) => ({
-      id: element.FeeGroupId === undefined ? null: element.FeeGroupId,
-      name: element.FeeGroupName === undefined ? null : element.FeeGroupName,
-     }))
+    result.feesActives = actives.map(({ caseNumber,id })=>({ caseNumber,id }));
 
-    return {
-      officerId,
-      officerName,
-      branchName,
-      feeGroupId,
-      feeGroup,
-      officerBusPkgId,
-      officerBusPkg,
-      officerIndPackageId,
-      officerIndPackage,
-      listGroup
-    }
-  })
+    /* contas detalhadas */
+    const docUrl = getDocumentUrl(packageId);
+    result.accounts = customerAccount.map(acc => ({
+      cifno:               acc.cifno,
+      ddaNumber:           acc.ddaNumber,
+      branchCity:          acc.branchCity,
+      branchState:         acc.branchState,
+      branchType:          acc.branchType,
+      defaultPackageType:  acc.defaultPackageType,
+      feePackage:          acc.feePackage,
+      defaultFeePackageId: acc.defaultFeePackageId,
+      defaultFeePackage:   acc.defaultFeePackage,
+      documentUrl:         docUrl,
+      feeAmount:           acc.feeAmount,
+      exceptionAmount:     acc.exceptionAmount ?? null
+    }));
 
-  return listOfficerPackage
-}
-
-export async function getOfficerPackageGetAll() {
-  const connection = await connectToFeeMgmtDb()
-
-  const recordset = await executeStoreProcedure(
-    connection,
-    'sp_get_officerpackage_bybranch',
-    {}
-  )
-
-  const listOfficerPackage = recordset.map((record) => {
-    const officerId = record.OfficerId === undefined ? null : record.OfficerId
-    const officerName = record.OfficerName === undefined ? null : record.OfficerName
-    const branchName = record.BranchName === undefined ? null : record.BranchName
-    const feeGroupId = record.FeeGroupId === undefined ? null : record.FeeGroupId
-    const feeGroup = record.FeeGroup === undefined ? null : record.FeeGroup
-    const officerBusPkgId = record.OfficerBusPkgGroupId === undefined ? null : record.OfficerBusPkgGroupId
-    const officerBusPkg = record.OfficerBusPkg === undefined ? null : record.OfficerBusPkg
-    const officerIndPackageId = record.OfficerIndPkgGroupId === undefined ? null : record.OfficerIndPkgGroupId
-    const officerIndPackage = record.OfficerIndPkg === undefined ? null : record.OfficerIndPkg
-
-    const listGroup = recordsetGroup.map((element) => ({
-      id: element.FeeGroupId === undefined ? null: element.FeeGroupId,
-      name: element.FeeGroupName === undefined ? null : element.FeeGroupName,
-     }))
-
-    return {
-      officerId,
-      officerName,
-      branchName,
-      feeGroupId,
-      feeGroup,
-      officerBusPkgId,
-      officerBusPkg,
-      officerIndPackageId,
-      officerIndPackage,
-      listGroup
-    }
-  })
-
-  return listOfficerPackage
-}
-
-export async function getOfficerPackageAll() {
-  const connection = await connectToFeeMgmtDb()
-
-  //Primeiro select
-  const recordset = await executeStoreProcedure(
-    connection,
-    'sp_get_officerpackage_bybranch',
-    {}
-  )
-
-  const listOfficerPackage = recordset.map((record) => {
-    const officerId = record.OfficerId
-    const officerName = record.OfficerName
-    const branchName = record.BranchName
-    const officerPackage = record.OfficerPkg
-
-    return {
-      officerId,
-      officerName,
-      branchName,
-      officerPackage
-    }
-  })
-
-  //captura informações de get_feegroupInfo
-  const connectionGroup = await connectToFeeMgmtDb()
-  const recordsetGroup = await executeStoreProcedure(
-    connectionGroup,
-    'sp_get_feegroup_info',
-    {}
-  )
-
-  const listFeeGroupInfo = recordset.map((recordsetGroup) => {
-    const groupId = recordsetGroup.GroupId
-    const groupName = recordsetGroup.GroupName === undefined ? null : recordsetGroup.GroupName
-    const businessPackageId = recordsetGroup.BusinessPackageId === undefined
-        ? null
-        : recordsetGroup.BusinessPackageId
-    const businessPackage = recordsetGroup.BusinessPackage === undefined
-        ? null
-        : recordsetGroup.BusinessPackage
-    const individualPackageId = recordsetGroup.IndividualPackageId
-    const individualPackage = recordsetGroup.IndividualPackage
-
-    return {
-      groupId,
-      groupName,
-      businessPackageId,
-      businessPackage,
-      individualPackageId,
-      individualPackage
-    }
-  })
-
-
-  return listOfficerPackage
-}
-
-export async function getFeegroup() {
-  const connection = await connectToFeeMgmtDb()
-
-  const recordset = await executeStoreProcedure(
-    connection,
-    'sp_get_feegroupinfo',
-    {}
-  )
-
-  const listOfficerPackage = recordset.map((record) => {
-    const officerId = record.OfficerId
-    const officerName = record.OfficerName
-    const branchName = record.BranchName
-    const officerPackage = record.OfficerPackage
-
-    return {
-      officerId,
-      officerName,
-      branchName,
-      officerPackage
-    }
-  })
-
-  return listOfficerPackage
-}
-
-
-
-export async function getBranchPackageOfficeById(id) {
-  const connection = await connectToFeeMgmtDb()
-
-  const recordset = await executeStoreProcedure(
-    connection,
-    'sp_get_branch_feepackage_info_offr',
-    { branch_code: id }
-  )
-
-  const listOfficerPackage = recordset.map((record) => {
-    const branchId = record.branch_id
-    const branchType = record.branch_type
-    const bussinessPackage = record.business_package
-    const bussinessPackageDescription = record.business_package_description
-    const city = record.city
-    const director = record.director.trim()
-    const individualPackage = record.individual_package
-    const individualPackageDescription = record.individual_package_description
-    const offPackage = record.off_package
-    const officerName = record.state
-
-
-    return {
-      branchId,
-      branchType,
-      bussinessPackage,
-      bussinessPackageDescription,
-      city,
-      director,
-      individualPackage,
-      individualPackageDescription,
-      offPackage,
-      officerName
-     }
-  })
-
-  return listOfficerPackage
-}
-
-export async function getBranchPackageOffice() {
-  const connection = await connectToFeeMgmtDb()
-  const recordset = await executeStoreProcedure(
-    connection,
-    'sp_get_branch_feepackage_info_offr',
-    {}
-  )
-
-  const listOfficerPackage = recordset.map((record) => {
-    const branchId = record.branch_id
-    const branchType = record.branch_type
-    const bussinessPackage = record.business_package
-    const bussinessPackageDescription = record.business_package_description
-    const city = record.city
-    const director = record.director.trim()
-    const individualPackage = record.individual_package
-    const individualPackageDescription = record.individual_package_description
-    const offPackage = record.off_package
-    const officerName = record.state
-
-
-    return {
-      branchId,
-      branchType,
-      bussinessPackage,
-      bussinessPackageDescription,
-      city,
-      director,
-      individualPackage,
-      individualPackageDescription,
-      offPackage,
-      officerName
-    }
-  })
-
-  return listOfficerPackage
-}
-
-export async function getFeePackageById(id) {
-  const connection = await connectToFeeMgmtDb()
-  const recordset = await executeStoreProcedure(
-    connection,
-    'sp_get_feepackagedetails',
-    { FeePackageId: id }
-  )
- 
-  if (!recordset) {
-    return undefined
+    result.documentUrl = docUrl;
+    return Result.ok(result);
   }
-
-  if (recordset.length === 0) {
-    return []
-  }
-
-  const groups = recordset.reduce((newList, current) => {
-    const feeGroupExisting = newList.find(
-      (fee) => fee.title === current.FeeGroup
-    )
-  
-    if (feeGroupExisting) {
-      feeGroupExisting.fees.push({
-        key: current.FeeDescription,
-        value: current.Amount,
-        tooltip: current.Tooltip
-      })
-    } else {
-      newList.push({
-        id: current.FeeGroupId,
-        title: current.FeeGroup,
-        fees: [
-          {
-            key: current.FeeDescription,
-            value: current.Amount,
-            tooltip: current.Tooltip
-          }
-        ]
-      })
-    }
-
-    return newList
-  }, [])
-
-  const packageResult = {
-    id: recordset[0]?.FeePackageID,
-    packageName: recordset[0]?.FeePackage,
-    accountType: recordset[0]?.PackageType,
-    feeType: recordset[0]?.PackageCoverage,
-    groups
-  }
-
-  return packageResult
 }
